added link to Mike M's Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <header>
         <h1>Title</h1>
+        <a href="https://mikemac1.github.io/hello-world/">The Adventures of Blondie & Laszlo!</a>
         <img src="https://via.placeholder.com/1200x200/8f8d8d/d6cfcf" alt="Large placeholder image"/>
         <nav>
             <ul>
