added html content and css style

--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>Title</h1>
-        <a href="https://mikemac1.github.io/hello-world/">The Adventures of Blondie & Laszlo!</a>
-        <img src="https://via.placeholder.com/1200x200/8f8d8d/d6cfcf" alt="Large placeholder image"/>
-        <nav>
-            <ul>
-                <li><a href="">Link A</a></li>
-                <li><a href="">Link B</a></li>
-                <li><a href="">Link C</a></li>
-            </ul>
-        </nav>
+        <h1 class="title">Title</h1>
+        <section>
+            <img  class="banner" src="https://via.placeholder.com/2000x200/8f8d8d/d6cfcf" alt="Large placeholder image"/>
+            <nav>
+                 <ul>
+                    <li><a href="">Link A</a></li>
+                    <li><a href="">Link B</a></li>
+                    <li><a href="">Link C</a></li>
+                </ul>
+            </nav>
+        </section>
     </header>
 
     <main>
-        <section>
-            <img src="https://via.placeholder.com/400x250" alt="Med placeholder image"/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.</p>
-        </section>
+        <div class="group">
+            <div class="text_left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
+            </div>
+          
+            <div class="images_right">
+              <img src="https://via.placeholder.com/800x400" alt="Med placeholder image"/>
+            </div>
+        </div>
 
-        <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.</p>
-            <img src="https://via.placeholder.com/400x250" alt="Med placeholder image"/>
-        </section>
+        <div class="group">
+            <div class="images_left">
+              <img src="https://via.placeholder.com/800x400" alt="Med placeholder image"/>
+            </div>
 
-        <section>
-            <img src="https://via.placeholder.com/400x250" alt="Med placeholder image"/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.</p>
-        </section>
+            <div class="text_right">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
+            </div>
+        </div>
+
+        <div class="group">
+            <div class="text_left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
+            </div>
+          
+            <div class="images_right">
+              <img src="https://via.placeholder.com/800x400" alt="Med placeholder image"/>
+            </div>
+        </div>
     </main>
 
-    <footer>
+    <footer class="footer">
+        <a href="https://mikemac1.github.io/hello-world/">The Adventures of Blondie & Laszlo!</a>
         <p>&copy; 102d43</p>
     </footer>
 </body>
