added more dynamic JS

--- a/index.html
+++ b/index.html
@@ -18,57 +18,15 @@
                 <ul>
                     <li><a href="">Link A</a></li>
                     <li><a href="">Link B</a></li>
+                    <li><a href='#' onclick='print()'>Set Amount of Articles Shown</a></li>
                     <li><a href='#' onclick='myclick()'>Staff Page</a></li>
-
                 </ul>
             </nav>
         </section>
     </header>
 
     <main>
-        <div class="group">
-            <div class="text_left">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh
-                venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit
-                aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum
-                suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt
-                tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
-            </div>
-
-            <div class="images_right">
-                <img src="https://via.placeholder.com/800x400" alt="Med placeholder image" />
-            </div>
-        </div>
-
-        <div class="group">
-            <div class="images_left">
-                <img src="https://via.placeholder.com/800x400" alt="Med placeholder image" />
-            </div>
-
-            <div class="text_right">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh
-                venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit
-                aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum
-                suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt
-                tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
-            </div>
-        </div>
-
-        <div class="group">
-            <div class="text_left">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Porta nibh
-                venenatis cras sed felis eget velit aliquet. Odio ut enim blandit volutpat maecenas volutpat blandit
-                aliquam. Euismod nisi porta lorem mollis aliquam. Suspendisse sed nisi lacus sed. Et egestas quis ipsum
-                suspendisse ultrices gravida. Pulvinar elementum integer enim neque. Tellus pellentesque eu tincidunt
-                tortor aliquam. Donec ac odio tempor orci dapibus ultrices in iaculis.
-            </div>
-
-            <div class="images_right">
-                <img src="https://via.placeholder.com/800x400" alt="Med placeholder image" />
-            </div>
+        <div id="output1">
         </div>
     </main>
 
